--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>杭州可熠网络科技有限公司</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/screen.css"> -->
+	 <link rel="stylesheet" type="text/css" href="css/media.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -17,8 +17,10 @@
 				<img class="logo" src="img/logo.png" alt="logo" />
 				<div class="title">
 					<h2>Mars , 你的恋爱教练</h2>
-					<p>恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
-					都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
+					<!--<p>恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+					都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>-->
+					<p>恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
+					都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
 				</div>
 				<div class="dowload">
 					<button class="hand" id="dowloa_btn">下载</button>
@@ -26,18 +28,20 @@
 				</div>
 			</div>
 		</div>
-		<!--footer-->
+		<!--footer start-->
 		<div class="footer">
 			<p class="t_c">杭州可熠网络科技有限公司   版权所有</br>Copyright©2018, shapemars.com.All Rights Reserved</p>
 		</div>
+		<!--footer end-->
 	</div>
-	<!--弹框-->
+	<!--弹框 start-->
 	<div class="popupBox none">
 		<div class="popupLayer"></div>
 		<div class="popup">
 			<p>产品将于2018年2月10日上线</br>敬请期待!</p>
-			<button class="hand close">我知道了</button>
+			<button class="hand close">确定</button>
 		</div>
 	</div>
+	<!--弹框 end-->
 </body>
 </html>
