--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<img class="logo" src="img/logo.png" alt="logo" />
 				<div class="title">
 					<h2>Mars , 你的恋爱教练</h2>
-					<!--<p>恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
-					都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>-->
-					<p>恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
+					<p class="title_pc none">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+					都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
+					<p class="title_wap none">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
 					都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
 				</div>
 				<div class="dowload">
