--- a/details.html
+++ b/details.html
@@ -17,13 +17,13 @@
 		<!--pages start-->
 		<section class="section section1">
 			<div class="section1_cnt">
-				<img src="img/logo.png" class="logo" alt="logo"/>
-				<h2 class="section1_title">Mars , 你的恋爱教练</h2>
-				<p class="section1_description title_pc none">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+				<img src="img/logo.png" class="logo animation1" alt="logo"/>
+				<h2 class="section1_title animation2">Mars , 你的恋爱教练</h2>
+				<p class="section1_description title_pc none animation3">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-				<p class="section1_description title_wap none">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
+				<p class="section1_description title_wap none animation3">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
 				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
-				<div class="section1_download">
+				<div class="section1_download animation4">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
 				</div>
