--- a/details.html
+++ b/details.html
@@ -32,19 +32,13 @@
 		<section class="section section2">
 			<h2 class="section2_title opacity_0 anchor2">女朋友不是追到的，</br>是吸引到的</h2>
 			<p class="section2_description opacity_0 anchor3">
-				恋爱的核心，是吸引，而不是迎合。</br>
-				你可能会有这样的经历，对自己喜欢的人无条件的付出，甚至做了很多违反自己原则的事情。</br>
-				这个过程很辛苦，也很漫长，希望通过更多的付出，去感动她，去追到她。</br>
-				但是，她却告诉你，你是一个好人。</br>
-				其实，你真正应该学习和努力的，不是怎么去追求，而是怎么去吸引</p>
+				恋爱的核心，是吸引，而不是迎合。<br/>你可能会有这样的经历，对自己喜欢的人无条件的付出，甚至做了很多违反自己原则的事情。这个过程很辛苦，也很漫长，希望通过更多的付出，去感动她，去追到她。但是，她却告诉你，你是一个好人。其实，你真正应该学习和努力的，不是怎么去追求，而是怎么去吸引</p>
 			<div class="section2_img opacity_0 anchor1"></div>
 		</section>
 		<section class="section section3">
-			<h2 class="section2_title t_l opacity_0 anchor5">发现并驾驭，吸引力的密码</h2>
+			<h2 class="section2_title t_l opacity_0 anchor5">发现并驾驭，<br/>吸引力的密码</h2>
 			<p class="section2_description t_l opacity_0 anchor6">
-				吸引是自然而然发生的。每个人的内心，都有一个神奇的程序，会告诉我们，
-				谁是更有魅力的</br>异性。我们甚至都不需要去思考，就会自动的做出判断。</br>
-				所以，只要我们发现并驾驭了其中的密码，就可以自然而然的，打开异性心中的吸引力开关</p>
+				吸引是自然而然发生的。每个人的内心，都有一个神奇的程序，会告诉我们，谁是更有魅力的异性。我们甚至都不需要去思考，就会自动的做出判断。所以，只要我们发现并驾驭了其中的密码，就可以自然而然的，打开异性心中的吸引力开关</p>
 			<div class="section2_img opacity_0 anchor4"></div>
 		</section>
 		<section class="section section4">
