--- a/details.html
+++ b/details.html
@@ -41,10 +41,11 @@
 				吸引是自然而然发生的。每个人的内心，都有一个神奇的程序，会告诉我们，谁是更有魅力的异性。我们甚至都不需要去思考，就会自动的做出判断。所以，只要我们发现并驾驭了其中的密码，就可以自然而然的，打开异性心中的吸引力开关</p>
 			<div class="section2_img opacity_0 anchor4"></div>
 		</section>
-		<section class="section section4">
-			<h2 class="section4_title opacity_0 anchor7">我们一起 , 开启这段神奇的旅程</h2>
+		<section class="section section4  anchor8">
+			<h2 class="section4_title title_pc none  opacity_0 anchor7">我们一起 , 开启这段神奇的旅程</h2>
+			<h2 class="section4_title title_wap none opacity_0 anchor7">我们一起 , <br/>开启这段神奇的旅程</h2>
 			<div class="section2_img">
-				<img src="img/bg3.png" alt="" />
+				<!--<img src="img/bg3.png" alt="" />-->
 			</div>
 		</section>
 		<!--pages end-->
