--- a/details.html
+++ b/details.html
@@ -37,7 +37,7 @@
 			<div class="section2_img opacity_0 anchor1"></div>
 		</section>
 		<section class="section section3">
-			<h2 class="section2_title t_l opacity_0 anchor5">发现并驾驭，<br/>吸引力的密码</h2>
+			<h2 class="section2_title t_l opacity_0 anchor5">发现并驾驭，吸引力的密码</h2>
 			<p class="section2_description t_l opacity_0 anchor6">
 				吸引是自然而然发生的。每个人的内心，都有一个神奇的程序，会告诉我们，谁是更有魅力的异性。我们甚至都不需要去思考，就会自动的做出判断。所以，只要我们发现并驾驭了其中的密码，就可以自然而然的，打开异性心中的吸引力开关</p>
 			<div class="section2_img opacity_0 anchor4"></div>
