--- a/details.html
+++ b/details.html
@@ -7,7 +7,7 @@
 	<title>杭州可熠网络科技有限公司</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/font.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/font.css">-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
