--- a/details.html
+++ b/details.html
@@ -4,14 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-	<title>杭州可熠网络科技有限公司</title>
+	<meta name="Keywords" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
+	<meta name="Description" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
+	<title>Mars，你的恋爱教练</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<!--<link rel="stylesheet" type="text/css" href="css/font.css">-->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css?v=1.0">
+	<!--<link rel="stylesheet" type="text/css" href="css/font.css?v=1">-->
+	<link rel="stylesheet" type="text/css" href="css/style.css?v=1.0">
+	<link rel="stylesheet" type="text/css" href="css/media.css?v=1.0">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/main.js?v=1.0"></script>
 </head>
 <body>
 	<div class="main">
@@ -20,11 +22,11 @@
 			<div class="section1_cnt">
 				<img src="img/logo.png" class="logo animation1" alt="logo"/>
 				<h2 class="section1_title animation2">Mars , 你的恋爱教练</h2>
-				<p class="section1_description title_pc none animation3">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+				<p class="section1_description title_pc none animation2">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-				<p class="section1_description title_wap none animation3">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
+				<p class="section1_description title_wap none animation2">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
 				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
-				<div class="section1_download animation4">
+				<div class="section1_download animation2">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
 				</div>
@@ -33,7 +35,7 @@
 		<section class="section section2">
 			<h2 class="section2_title opacity_0 anchor2">女朋友不是追到的，</br>是吸引到的</h2>
 			<p class="section2_description opacity_0 anchor3">
-				恋爱的核心，是吸引，而不是迎合。<br/>你可能会有这样的经历，对自己喜欢的人无条件的付出，甚至做了很多违反自己原则的事情。这个过程很辛苦，也很漫长，希望通过更多的付出，去感动她，去追到她。但是，她却告诉你，你是一个好人。其实，你真正应该学习和努力的，不是怎么去追求，而是怎么去吸引</p>
+				恋爱的核心，是吸引，而不是迎合。<br/>你可能会有这样的经历，对自己喜欢的人无条件的付出，甚至做了很多违反自己原则的事情。这个过程很辛苦，也很漫长，希望通过更多的付出，去感动她，去追到她。但是，她却告诉你，你是一个好人。<br/>其实，你真正应该学习和努力的，不是怎么去追求，而是怎么去吸引</p>
 			<div class="section2_img opacity_0 anchor1"></div>
 		</section>
 		<section class="section section3">
@@ -42,12 +44,10 @@
 				吸引是自然而然发生的。每个人的内心，都有一个神奇的程序，会告诉我们，谁是更有魅力的异性。我们甚至都不需要去思考，就会自动的做出判断。<br/>所以，只要我们发现并驾驭了其中的密码，就可以自然而然的，打开异性心中的吸引力开关</p>
 			<div class="section2_img opacity_0 anchor4"></div>
 		</section>
-		<section class="section section4  anchor8">
-			<h2 class="section4_title title_pc none  opacity_0 anchor7">我们一起 , 开启这段神奇的旅程</h2>
+		<section class="section section4 anchor8">
+			<h2 class="section4_title title_pc none opacity_0 anchor7">我们一起 , 开启这段神奇的旅程</h2>
 			<h2 class="section4_title title_wap none opacity_0 anchor7">我们一起 , <br/>开启这段神奇的旅程</h2>
-			<div class="section2_img">
-				<!--<img src="img/bg3.png" alt="" />-->
-			</div>
+			<div class="section2_img"></div>
 		</section>
 		<!--pages end-->
 		<!--footer start-->
