--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
 				<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
 				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
-				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
+				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
 				<div class="section1_download opacity_0">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
