--- a/details.html
+++ b/details.html
@@ -9,7 +9,6 @@
 	<title>Mars，你的恋爱教练</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<!--<link rel="stylesheet" type="text/css" href="css/font.css?v=1">-->
 	<link rel="stylesheet" type="text/css" href="css/style.css?v=1.0">
 	<link rel="stylesheet" type="text/css" href="css/media.css?v=1.0">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -23,8 +22,8 @@
 				<h2 class="section1_title opacity_0">Mars , 你的恋爱教练</h2>
 				<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
-				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
+				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>
+				每个人都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
 				<div class="section1_download opacity_0">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
