--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+	<meta name="Keywords" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
+	<meta name="Description" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
 	<title>杭州可熠网络科技有限公司</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css?v=1.0">
+	<link rel="stylesheet" type="text/css" href="css/media.css?v=1.0">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<div class="main">
 		<!--pages start-->
 		<section class="section section1 whole_screen">
 			<div class="section1_cnt">
-				<img src="img/logo.png" class="logo" alt="logo"/>
-				<h2 class="section1_title">Mars , 你的恋爱教练</h2>
-				<p class="section1_description title_pc none">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+				<img src="img/logo.png" class="logo opacity_0" alt="logo"/>
+				<h2 class="section1_title opacity_0">Mars , 你的恋爱教练</h2>
+				<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-				<p class="section1_description title_wap none">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
-				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情。</p>
-				<div class="section1_download">
+				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
+				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
+				<div class="section1_download opacity_0">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
 				</div>
@@ -44,6 +45,7 @@
 			</div>
 		</div>
 		<!--下载提示弹框 end-->
+		<script type="text/javascript" src="js/main.js?v=1.0"></script>
 	</div>
 </body>
 </html>
