--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 	<meta name="Keywords" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
 	<meta name="Description" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
-	<title>杭州可熠网络科技有限公司</title>
+	<title>Mars，你的恋爱教练</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css?v=1.0">
