--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="Keywords" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
 	<meta name="Description" content="恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情"/>
 	<title>Mars，你的恋爱教练</title>
