--- a/details.html
+++ b/details.html
@@ -19,10 +19,10 @@
 		<div class="section1_cnt">
 			<img src="img/logo.png" class="logo opacity_0" alt="logo"/>
 			<h2 class="section1_title opacity_0">Mars , 你的恋爱教练</h2>
-			<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+			<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人<br/>
 			都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-			<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>
-			每个人都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
+			<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，<br/>而是一种能力，就像打球，游泳一样。<br/>
+			每个人都可以通过学习和努力，<br/>来掌握其中的方法，拥有更好的爱情</p>
 			<div class="section1_download opacity_0">
 				<button class="hand" id="download_btn">下载</button>
 				<p>苹果客户端</p>
@@ -30,7 +30,7 @@
 		</div>
 	</section>
 	<section class="section section2">
-		<h2 class="section2_title opacity_0 anchor2">女朋友不是追到的，</br>是吸引到的</h2>
+		<h2 class="section2_title opacity_0 anchor2">女朋友不是追到的，<br/>是吸引到的</h2>
 		<p class="section2_description opacity_0 anchor3">
 			恋爱的核心，是吸引，而不是迎合。<br/>你可能会有这样的经历，对自己喜欢的人无条件的付出，甚至做了很多违反自己原则的事情。这个过程很辛苦，也很漫长，希望通过更多的付出，去感动她，去追到她。但是，她却告诉你，你是一个好人。<br/>其实，你真正应该学习和努力的，不是怎么去追求，而是怎么去吸引</p>
 		<div class="section2_img opacity_0 anchor1"></div>
@@ -49,14 +49,14 @@
 	<!--pages end-->
 	<!--footer start-->
 	<div class="footer">
-		<p class="t_c">杭州可熠网络科技有限公司   版权所有</br>Copyright©2018, shapemars.com.All Rights Reserved</p>
+		<p class="t_c">杭州可熠网络科技有限公司   版权所有<br/>Copyright©2018, shapemars.com.All Rights Reserved</p>
 	</div>
 	<!--footer end-->
 	<!--下载提示弹框 start-->
 	<div class="popup_box none">
 		<div class="popup_layer"></div>
 		<div class="popup">
-			<p>产品将于2018年2月10日上线</br>敬请期待!</p>
+			<p>产品将于2018年2月10日上线<br/>敬请期待!</p>
 			<button class="hand close">确定</button>
 		</div>
 	</div>
