--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			<div class="section1_cnt">
 				<img src="img/logo.png" class="logo opacity_0" alt="logo"/>
 				<h2 class="section1_title opacity_0">Mars , 你的恋爱教练</h2>
-				<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人</br>
+				<p class="section1_description title_pc none opacity_0">恋爱并不是一种神奇的天赋，而是一种能力，就像打球，游泳一样。每个人<br/>
 				都可以通过学习和努力，来掌握其中的方法，拥有更好的爱情</p>
-				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，</br>而是一种能力，就像打球，游泳一样。</br>每个人
-				都可以通过学习和努力，</br>来掌握其中的方法，拥有更好的爱情</p>
+				<p class="section1_description title_wap none opacity_0">恋爱并不是一种神奇的天赋，<br/>而是一种能力，就像打球，游泳一样。<br/>每个人
+				都可以通过学习和努力，<br/>来掌握其中的方法，拥有更好的爱情</p>
 				<div class="section1_download opacity_0">
 					<button class="hand" id="download_btn">下载</button>
 					<p>苹果客户端</p>
@@ -33,14 +33,14 @@
 		<!--pages end-->
 		<!--footer start-->
 		<div class="footer">
-			<p class="t_c">杭州可熠网络科技有限公司   版权所有</br>Copyright©2018, shapemars.com.All Rights Reserved</p>
+			<p class="t_c">杭州可熠网络科技有限公司   版权所有<br/>Copyright©2018, shapemars.com.All Rights Reserved</p>
 		</div>
 		<!--footer end-->
 		<!--下载提示弹框 start-->
 		<div class="popup_box none">
 			<div class="popup_layer"></div>
 			<div class="popup">
-				<p>产品将于2018年2月10日上线</br>敬请期待!</p>
+				<p>产品将于2018年2月10日上线<br/>敬请期待!</p>
 				<button class="hand close">确定</button>
 			</div>
 		</div>
